[refactor] 판매자 로그아웃,판매자 회원탈퇴 처리

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Register</title>
+<meta charset="UTF-8">
+<title>Register</title>
 </head>
 <body>
 <h1>Register Page</h1>
@@ -15,7 +14,7 @@
     <input type="email" id="email" name="email"><br>
     <label for="phoneNumber">phoneNumber</label>
     <input type="text" id="phoneNumber" name="phoneNumber"><br>
-    <label for="restaurantName">restaurantName</label>
+    <label for="restaurantName">restaregister.htmlurantName</label>
     <input type="text" id="restaurantName" name="restaurantName"><br>
     <label for="categories">categories</label>
     <input type="text" id="categories" name="categories"><br>
