--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,7 +14,7 @@
     <input type="email" id="email" name="email"><br>
     <label for="phoneNumber">phoneNumber</label>
     <input type="text" id="phoneNumber" name="phoneNumber"><br>
-    <label for="restaurantName">restaregister.htmlurantName</label>
+    <label for="restaurantName">restaurantName</label>
     <input type="text" id="restaurantName" name="restaurantName"><br>
     <label for="categories">categories</label>
     <input type="text" id="categories" name="categories"><br>
