--- a/src/main/resources/templates/seller/lineup.html
+++ b/src/main/resources/templates/seller/lineup.html
@@ -12,7 +12,7 @@
     $(document).ready(function () {
         $.ajax({
             url: '/seller/lineup',
-            method: 'GET',
+            type: 'GET',
             headers: {
                 'Authorization': localStorage.getItem('accessToken')
             }
