--- a/src/main/resources/templates/seller-infos.html
+++ b/src/main/resources/templates/seller-infos.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
-<meta charset="UTF-8">
-<title>Register</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>판매자 수정</title>
 </head>
 <body>
-<h1>Register Page</h1>
-<form action="/seller/info" method="post" enctype="multipart/form-data">
+<h1>판매자 수정</h1>
+<form th:action="@{/seller/infos}" method="post" enctype="multipart/form-data">
     <input type="hidden" name="_method" value="PUT"/>
     <label for="name">name</label>
     <input type="text" id="name" name="name"><br>
@@ -15,7 +16,6 @@
     <input type="text" id="phoneNumber" name="phoneNumber"><br>
     <label for="nickName">nickName</label>
     <input type="text" id="nickName" name="nickName"><br>
-    <!--    <button type="submit">등록</button>-->
     <button type="submit">등록</button>
 
 </form>
