--- a/src/main/resources/templates/seller.html
+++ b/src/main/resources/templates/seller.html
@@ -21,6 +21,9 @@
 <a th:href="@{/seller/infos}" th:method="get" enctype="multipart/form-data">
     <button type="button">판매자 정보 수정</button>
 </a>
+<a th:href="@{/seller/updaterestaurant}" th:method="get" enctype="multipart/form-data">
+    <button type="button">레스토랑 정보 수정</button>
+</a>
 
 <script>
 
