--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -13,7 +13,7 @@
     <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 
-    <!--    <script type="text/javascript" th:src="@{/js/admin.js}"></script>-->
+    <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
     <title>WAITING CATCH 관리자</title>
 </head>
 <body>
@@ -39,6 +39,8 @@
         <a href="/admin/category">카테고리</a>
     </ul>
 </nav>
-DashBoard
+<div class="body">
+    <h1 style="color: #8B60C7">DashBoard</h1>
+</div>
 </body>
 </html>
