--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -13,8 +13,8 @@
             crossorigin="anonymous"></script>
     <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
 
-    <!--    <script type="text/javascript" th:src="@{/js/admin.js}"></script>-->
     <title>WAITING CATCH 관리자 로그인 페이지</title>
 </head>
 <body>
@@ -29,6 +29,14 @@
 </div>
 
 <script>
+    $(document).ready(function () {
+        $('#password').on('keypress', function (e) {
+            if (e.key == 'Enter') {
+                login();
+            }
+        })
+    })
+
     function login() {
         let username = $('#username').val();
         let password = $('#password').val();
@@ -41,7 +49,6 @@
             return;
         }
 
-
         $.ajax({
             type: "POST",
             url: `/api/admin/signin`,
@@ -53,7 +60,10 @@
                     let url = host + '/admin/templates/main';
                     let todayDate = new Date();
                     todayDate.setDate(todayDate.getDate() + 30); // 현재 시각 + 일 단위로 쿠키 만료 날짜
-                    document.cookie = 'Authorization' + "=" + xhr.getResponseHeader('Authorization') + "; path=/; expires=" + todayDate.toString() + ";";
+                    document.cookie =
+                        'Authorization' + "=" + xhr.getResponseHeader('Authorization') + "; " +
+                        "path=/; expires=" + todayDate.toString() + ";";
+                    alert("로그인 성공")
                     window.location.href = 'http://' + url;
                 } else {
                     alert('로그인에 실패하셨습니다. 다시 로그인해 주세요.')
