[fix] merge 후 admin 페이지 url 일치 작업

--- a/src/main/resources/templates/admin/review.html
+++ b/src/main/resources/templates/admin/review.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header>
-    <a href="/admin/main">
+    <a href="/admin/templates/main">
         <div>WAITING CATCH</div>
     </a>
     <nav>
@@ -30,13 +30,13 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/admin/seller-management">판매자요청</a>
-        <a href="/admin/user-list">유저 목록</a>
-        <a href="/admin/restaurant-list">레스토랑 목록</a>
-        <a href="/admin/event">이벤트</a>
-        <a href="/admin/blacklist">블랙리스트</a>
-        <a href="/admin/review" style="color: #8B60C7">리뷰 검열</a>
-        <a href="/admin/category">카테고리</a>
+        <a href="/admin/templates/seller-management">판매자요청</a>
+        <a href="/admin/templates/customers">유저 목록</a>
+        <a href="/admin/templates/restaurants">레스토랑 목록</a>
+        <a href="/admin/templates/event">이벤트</a>
+        <a href="/admin/templates/blacklist">블랙리스트</a>
+        <a href="/admin/templates/review" style="color: #8B60C7">리뷰 검열</a>
+        <a href="/admin/templates/category">카테고리</a>
     </ul>
 </nav>
 리뷰 검열 페이지
