--- a/src/main/resources/templates/admin/restaurant-list.html
+++ b/src/main/resources/templates/admin/restaurant-list.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-    <!--    <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">-->
+        <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/css.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
