[refactor] BlackList -> Blacklist로 변경 및 BlackListRequest -> BlacklistDemand로 변경
BlackList -> Blacklist로 변경 및 BlackListRequest -> BlacklistDemand로 변경

--- a/src/main/resources/templates/admin/blacklist.html
+++ b/src/main/resources/templates/admin/blacklist.html
@@ -52,7 +52,7 @@
             <th scope="col"></th>
         </tr>
         </thead>
-        <tbody id="blacklistRequest">
+        <tbody id="blacklistDemand">
 
         </tbody>
     </table>
