--- a/src/main/resources/templates/seller/lineup-list.html
+++ b/src/main/resources/templates/seller/lineup-list.html
@@ -21,9 +21,15 @@
             <td th:text="${lineup.status.value}">대기</td>
             <td th:text="${lineup.startedAt}">2023-03-01T11:00:00</td>
             <td th:text="${lineup.arrivedAt}">2023-03-01T12:00:00</td>
-            <td><button type="button" th:onclick="call([[${lineup.id}]])">고객 호출</button></td>
-            <td><button type="button" th:onclick="arrive([[${lineup.id}]])">고객 도착</button></td>
-            <td><button type="button" th:onclick="cancel([[${lineup.id}]])">취소</button></td>
+            <td>
+                <button type="button" th:onclick="call([[${lineup.id}]])">고객 호출</button>
+            </td>
+            <td>
+                <button type="button" th:onclick="arrive([[${lineup.id}]])">고객 도착</button>
+            </td>
+            <td>
+                <button type="button" th:onclick="cancel([[${lineup.id}]])">취소</button>
+            </td>
         </tr>
         </tbody>
     </table>
