[fix] #4 병합 후 어드민 프론트 블랙리스트 오류 수정

--- a/src/main/resources/templates/admin/blacklist.html
+++ b/src/main/resources/templates/admin/blacklist.html
@@ -15,6 +15,7 @@
 
     <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
     <script type="text/javascript" th:src="@{/js/admin/blacklist.js}"></script>
+    <script type="text/javascript" th:src="@{/js/admin.js}"></script>
     <title>WAITING CATCH 관리자</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
     <nav>
         <ul>
             <a href="/">관리자 님</a>
-            <a href="/">Logout</a>
+            <a href="#" onclick="logout();">Logout</a>
         </ul>
     </nav>
 </header>
