--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 
     <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
+    <script type="text/javascript" th:src="@{/js/admin.js}"></script>
     <title>WAITING CATCH 관리자</title>
 </head>
 <body>
