--- a/src/main/resources/static/css/admin-style.css
+++ b/src/main/resources/static/css/admin-style.css
@@ -95,13 +95,13 @@ header > a > div {
     max-width: 450px;
     width: 90%;
 
-    margin: 10px auto 10px auto;
+    margin: 10px 10px 10px 10px;
     padding: 10px 10px 10px 10px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
 
     cursor: pointer;
 }
@@ -174,7 +174,7 @@ header > a > div {
     color: white;
     background-color: #8B60C7;
 
-    padding: 0 50px 0 50px;
+    padding: 5px 50px 5px 50px;
     margin: 5px 5px 5px 5px;
 }
 
@@ -199,6 +199,10 @@ header > a > div {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.updateEvent > div {
+    margin: 5px auto 5px auto;
 }
 
 .coupon {
