[style] #4 판매자요청, 유저목록, 레스토랑목록 테이블 수정

--- a/src/main/resources/static/css/admin-style.css
+++ b/src/main/resources/static/css/admin-style.css
@@ -251,3 +251,17 @@ header > a > div {
     padding: 0 5px 0 5px;
     margin: 0 5px 0 5px;
 }
+
+.sellerManagementBtn {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.restaurantBtn {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
