--- a/src/main/resources/templates/admin/restaurant-list.html
+++ b/src/main/resources/templates/admin/restaurant-list.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
-        <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
+    <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/css.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -41,58 +41,107 @@
         <a href="/admin/templates/customers">유저 목록</a>
         <a href="/admin/templates/restaurants" style="color: #8B60C7">레스토랑 목록</a>
         <a href="/admin/templates/event">이벤트</a>
-        <a href="/admin/templates/blacklist" >블랙리스트</a>
+        <a href="/admin/templates/blacklist">블랙리스트</a>
         <a href="/admin/templates/review">리뷰 검열</a>
         <a href="/admin/templates/category">카테고리</a>
     </ul>
 </nav>
 
+<div class="body">
+    <!--    <div class="board_wrap">-->
+    <!--        <div class="board_title">-->
+    <!--                <h1 style="color: #8B60C7">레스토랑 목록</h1>-->
+    <!--            <p>레스토랑 목록을 보여드리겠습니다.</p>-->
+    <!--        </div>-->
 
-<div class="board_wrap">
-    <div class="board_title">
-        <strong>레스토랑 목록</strong>
-        <p>레스토랑 목록을 보여드리겠습니다.</p>
-    </div>
+    <!--        <div class="board_list_wrap">-->
+    <!--            <div class="board_list">-->
+    <!--                <div class="top">-->
+    <!--                    <div class="num">번호</div>-->
+    <!--                    <div class="writer">매장명</div>-->
+    <!--                    <div class="writer">이미지</div>-->
+    <!--                    <div class="writer">매장번호</div>-->
+    <!--                    <div class="writer">설명</div>-->
+    <!--                    <div class="writer">카테고리</div>-->
+    <!--                    <div class="writer">키워드</div>-->
+    <!--                    <div class="writer">사업자번호</div>-->
+    <!--                    <div class="writer">주소</div>-->
+    <!--                    <div class="writer">삭제여부</div>-->
+    <!--                    <div class="writer">사업자이름</div>-->
 
-    <div class="board_list_wrap">
-        <div class="board_list">
-            <div class="top">
-                <div class="num">번호</div>
-                <div class="writer">매장명</div>
-                <div class="writer">이미지</div>
-                <div class="writer">매장번호</div>
-                <div class="writer">설명</div>
-                <div class="writer">카테고리</div>
-                <div class="writer">키워드</div>
-                <div class="writer">사업자번호</div>
-                <div class="writer">주소</div>
-                <div class="writer">삭제여부</div>
-                <div class="writer">사업자이름</div>
+    <!--                </div>-->
 
+    <!--                <div th:each="restaurant, iStat : ${restaurants}">-->
+    <!--                    <div class="num" scope="row" th:text="${restaurant.id}">1</div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.name}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.images}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.phoneNumber}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.description}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.category}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.searchKeywords}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.businessNo}"></div>-->
+    <!--                    <div div class="writer"-->
+    <!--                         th:text="${restaurant.province}+${restaurant.city}+${restaurant.street}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.deleted}"></div>-->
+    <!--                    <div div class="writer" th:text="${restaurant.user.username}"></div>-->
+    <!--                    <form th:action="@{'/admin/templates/restaurants/' + ${restaurant.id}}" th:method="delete">-->
+    <!--                        <div class="form-group">-->
+    <!--                            <p>삭제</p>-->
+    <!--                            <button type="submit" class="btn btn-primary" value="거절">삭제</button>-->
+    <!--                        </div>-->
+    <!--                    </form>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
+    <h1 style="color: #8B60C7">레스토랑 목록</h1>
+    <div class="restaurantList">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">번호</th>
+                <th scope="col">매장명</th>
+                <th scope="col">이미지</th>
+                <th scope="col">매장번호</th>
+                <th scope="col">설명</th>
+                <th scope="col">카테고리</th>
+                <th scope="col">키워드</th>
+                <th scope="col">사업자번호</th>
+                <th scope="col">주소</th>
+                <th scope="col">삭제여부</th>
+                <th scope="col">사업자이름</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody id="restaurantListTable">
+            <div th:each="restaurant, iStat : ${restaurants}">
+                <tr>
+                    <th scope="row" th:text="${restaurant.id}">1</th>
+                    <td th:text="${restaurant.name}"></td>
+                    <td th:text="${restaurant.images}"></td>
+                    <td th:text="${restaurant.phoneNumber}"></td>
+                    <td th:text="${restaurant.description}"></td>
+                    <td th:text="${restaurant.category}"></td>
+                    <td th:text="${restaurant.searchKeywords}"></td>
+                    <td th:text="${restaurant.businessNo}"></td>
+                    <td th:text="${restaurant.province} + ' ' + ${restaurant.city} + ' ' + ${restaurant.street}"></td>
+                    <td th:text="${restaurant.deleted}"></td>
+                    <td th:text="${restaurant.user.username}"></td>
+                    <td>
+                        <div class="restaurantBtn">
+                            <button type="button" class="btn" value="거절">리뷰</button>
+                            <form th:action="@{'/admin/templates/restaurants/' + ${restaurant.id}}" th:method="delete">
+                                <div class="form-group">
+                                    <button type="submit" class="btn" value="거절">삭제</button>
+                                </div>
+                            </form>
+                        </div>
+                    </td>
+                </tr>
             </div>
-
-                <div th:each="restaurant, iStat : ${restaurants}">
-                <div class="num" scope="row" th:text="${restaurant.id}">1</div>
-                <div div class="writer" th:text="${restaurant.name}"></div>
-                <div div class="writer" th:text="${restaurant.images}"></div>
-                <div div class="writer" th:text="${restaurant.phoneNumber}"></div>
-                <div div class="writer" th:text="${restaurant.description}"></div>
-                <div div class="writer" th:text="${restaurant.category}"></div>
-                <div div class="writer" th:text="${restaurant.searchKeywords}"></div>
-                <div div class="writer" th:text="${restaurant.businessNo}"></div>
-                <div div class="writer" th:text="${restaurant.province}+${restaurant.city}+${restaurant.street}"></div>
-                <div div class="writer" th:text="${restaurant.deleted}"></div>
-                <div div class="writer" th:text="${restaurant.user.username}"></div>
-                <form th:action="@{'/admin/templates/restaurants/' + ${restaurant.id}}" th:method="delete">
-                    <div class="form-group">
-                        <p>삭제</p>
-                        <button type="submit" class="btn btn-primary" value="거절">삭제</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+            </tbody>
+        </table>
     </div>
-</div>
 </div>
 </body>
 </html>
